--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -1,5 +1,7 @@
 #!/usr/local/bin/3proxy
 config /etc/3proxy/3proxy.cfg
+users /etc/3proxy/.proxyauth
+
 nserver 8.8.8.8
 nserver 77.88.8.8
 
@@ -9,7 +11,7 @@ timeouts 1 5 30 60 180 1800 15 60
 log /var/log/3proxy.log
 logformat "- +_L%t.%.  %N.%p %E %U %C:%c %R:%r %O %I %h %T"
 
-auth none
+auth cache strong
  
 socks -p8080
 proxy -n -a -p3128
