--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -1,17 +1,13 @@
-#!/usr/local/bin/3proxy
-config /etc/3proxy/3proxy.cfg
-users /etc/3proxy/.proxyauth
+log /dev/null
+
+allow * * * *
+
+auth strong
+users user:CL:password
 
 nserver 8.8.8.8
 nserver 77.88.8.8
+nserver 127.0.0.1
 
-nscache 3600
-timeouts 1 5 30 60 180 1800 15 60
-
-log /var/log/3proxy.log
-logformat "- +_L%t.%.  %N.%p %E %U %C:%c %R:%r %O %I %h %T"
-
-auth cache strong
- 
-socks -p8080
-proxy -n -a -p3128
+nscache 65536
+socks -p65123
